fix: add overflow hidden to remove blank content
Closes: #32

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -213,6 +213,7 @@ nav {
 .loginSection {
 	min-height: 100vh;
 	width: 100%;
+	overflow: hidden;
 
 	&:after {
 		@include backgroundBefore(fixed, .4, url('../../public/img/login_background.jpg') fixed no-repeat center / cover)
